src/AIS/AIS_InteractiveContext_1.cxx
@@ -422,7 +422,6 @@ AIS_StatusOfDetection AIS_InteractiveContext::MoveTo (const Standard_Integer  th
     theView->Viewer()->Update();
   }
 
-  mylastmoveview = theView;
   return aStatus;
 }
 
